# Leafscan

./: .gitignore  .leafhub  LICENSE  README.md  install.cmd  install.ps1  install.sh  leafhub.toml  pyproject.toml  setup.sh
.github/workflows/: ci.yml
leafhub_dist/: LEAFHUB.md  __init__.py  probe.py  register.sh  setup_template.sh
leafscan/: aggregator.py  cli.py  extractor.py  model.py  pdf.py  pipeline.py  reporter.py  scraper.py
prompts/: design_report.txt
tests/: smoke_e2e.py  test_aggregator.py  test_extractor.py  test_model.py  test_pdf.py  test_reporter.py
