[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "leafscan"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.43",
    "anthropic>=0.25",
    "openai>=1.30",
    "markdown>=3.6",
    "weasyprint>=62",
]

[project.optional-dependencies]
leafhub = [
    "leafhub @ git+https://github.com/Rebas9512/Leafhub.git",
    "leafhub-sdk @ git+https://github.com/Rebas9512/Leafhub.git#subdirectory=sdk-pkg",
]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
leafscan = "leafscan.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["leafscan*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
